Fix revisions link collapsing

--- a/wagtail/wagtailadmin/static_src/wagtailadmin/scss/core.scss
+++ b/wagtail/wagtailadmin/static_src/wagtailadmin/scss/core.scss
@@ -172,6 +172,7 @@ footer {
 
         .meta p {
             white-space: normal;
+            width: 100%;
         }
     }
 
